[package]
name = "libwindi"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Heyang Zhou <heyang.zhou@icloud.com>"]
description = "WindiSync client (library)"
repository = "https://github.com/BlueLogicLabs/windi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11.8", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.19"
hex = "0.4.3"
base64 = "0.13.0"
