[package]
name = "windi"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Heyang Zhou <heyang.zhou@icloud.com>"]
description = "WindiSync client"
repository = "https://github.com/BlueLogicLabs/windi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libwindi = { path = "../libwindi" }
anyhow = "1"
pretty_env_logger = "0.4"
tokio = { version = "1.15.0", features = ["full"] }
structopt = "0.3.25"
serde_json = "1"
hex = "0.4.3"
